Updates Logo and Links
- Add linking to guides, roadmap
- Fixes missing logo

--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,8 @@
     <title>amber - home</title>
     <link rel="icon" type="image/png" href="http://www.weebly.com/uploads/reseller/assets/2024123086-favicon.ico" />
 
-
-
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
 
     <link id="wsite-base-style" rel="stylesheet" type="text/css" href="http://cdn2.editmysite.com/css/sites.css?buildTime=1234" />
     <link rel="stylesheet" type="text/css" href="http://cdn2.editmysite.com/css/old/fancybox.css?1234" />
@@ -207,7 +204,6 @@
     </script>
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js'></script>
 
-
 </head>
 
 <body class="header-page  wsite-page-index  full-width-body-off header-overlay-on alt-nav-off  wsite-theme-light">
@@ -217,29 +213,35 @@
                 <div class="container">
                     <div class="logo"><span class="wsite-logo">
 
-	<a href="">
-		<img src="uploads/1/0/4/6/104694245/logo-white-background.jpg" />
-	</a>
+<a href="">
+<img src="uploads/1/0/4/6/104694245/published/white-logo-transparent-background_1.png" />
+</a>
 
 </span></div>
                     <div class="nav desktop-nav">
                         <ul class="wsite-menu-default">
                             <li id="pg709196432525450600" class="wsite-menu-item-wrap">
-                                <a href="https://quip.com/bov8A0uRjwKE" target="_blank" class="wsite-menu-item">
-				roadmap
-			</a>
+                                <a href="https://amber-crystal.gitbooks.io/amber/content/" target="_blank" class="wsite-menu-item">
+guides
+</a>
+
+                            </li>
+                            <li id="pg709196432525450600" class="wsite-menu-item-wrap">
+                                <a href="https://amber-crystal.gitbooks.io/amber/content/" target="_blank" class="wsite-menu-item">
+roadmap
+</a>
 
                             </li>
                             <li id="pg246594821695395628" class="wsite-menu-item-wrap">
                                 <a href="https://github.com/Amber-Crystal/amber" target="_blank" class="wsite-menu-item">
-				github
-			</a>
+github
+</a>
 
                             </li>
                             <li id="pg417344239176849217" class="wsite-menu-item-wrap">
                                 <a href="https://gitter.im/Amber-Crystal/Lobby" target="_blank" class="wsite-menu-item">
-				Chat
-			</a>
+Chat
+</a>
 
                             </li>
                         </ul>
@@ -266,8 +268,6 @@
                                                             <tr class="wsite-multicol-tr">
                                                                 <td class="wsite-multicol-col" style="width:43.391304347826%; padding:0 15px;">
 
-
-
                                                                     <div>
                                                                         <div class="wsite-image wsite-image-border-none " style="padding-top:0px;padding-bottom:0px;margin-left:0px;margin-right:0px;text-align:center">
                                                                             <a href='uploads/1/0/4/6/104694245/white-logo-transparent-background_1_orig.png' rel='lightbox' onclick='if (!lightboxLoaded) return false'>
@@ -277,12 +277,8 @@
                                                                         </div>
                                                                     </div>
 
-
-
                                                                 </td>
                                                                 <td class="wsite-multicol-col" style="width:56.608695652174%; padding:0 15px;">
-
-
 
                                                                     <div class="wsite-spacer" style="height:90px;"></div>
 
@@ -291,7 +287,10 @@
                                                                     </h2>
 
                                                                     <div class="paragraph" style="text-align:left;">
-                                                                        <font size="5">Amber<span style="font-weight: normal;">&nbsp;is a web application framework written in </span>Crystal<span style="font-weight: normal;">&nbsp;inspired by Kemal, Rails, Phoenix and other popular application frameworks.</span></font>
+                                                                        <font size="5">Amber<span style="font-weight: normal;">&nbsp;is a web application framework written in </span>Crystal
+                                                                            <span style="font-weight: normal;">&nbsp;inspired by a web of frameworks and other
+popular application frameworks.</span>
+                                                                        </font>
                                                                     </div>
 
                                                                     <div style="text-align:left;">
@@ -301,8 +300,6 @@
                                                                         </a>
                                                                         <div style="height: 10px; overflow: hidden;"></div>
                                                                     </div>
-
-
 
                                                                 </td>
                                                             </tr>
@@ -339,8 +336,6 @@
                                                         <tr class="wsite-multicol-tr">
                                                             <td class="wsite-multicol-col" style="width:23.217391304348%; padding:0 15px;">
 
-
-
                                                                 <div style="text-align:left;">
                                                                     <div style="height: 10px; overflow: hidden;"></div>
                                                                     <a class="wsite-button wsite-button-small wsite-button-normal" href="https://github.com/Amber-Crystal/amber/blob/master/.github/CONTRIBUTING.md" target="_blank">
@@ -349,19 +344,13 @@
                                                                     <div style="height: 10px; overflow: hidden;"></div>
                                                                 </div>
 
-
-
                                                             </td>
                                                             <td class="wsite-multicol-col" style="width:76.782608695652%; padding:0 15px;">
-
-
 
                                                                 <div class="paragraph">
                                                                     <font color="#515151">Contributing to Amber can be a rewarding way to learn, teach, and build experience in just about any skill you can imagine. &nbsp;Amber is a community effort and we want You to be part
                                                                         of ours</font>
                                                                 </div>
-
-
 
                                                             </td>
                                                         </tr>
@@ -393,35 +382,23 @@
                                                         <tr class="wsite-multicol-tr">
                                                             <td class="wsite-multicol-col" style="width:33.333333333333%; padding:0 15px;">
 
-
-
                                                                 <div class="paragraph">
                                                                     <font color="#515151"><strong>HUMILITY</strong>&nbsp;We are not the center of the universe. You're neither omniscient nor infallible. You are open to self-improvement.</font>
                                                                 </div>
 
-
-
                                                             </td>
                                                             <td class="wsite-multicol-col" style="width:33.333333333333%; padding:0 15px;">
-
-
 
                                                                 <div class="paragraph">
                                                                     <font color="#515151"><strong>RESPECT</strong>&nbsp;You genuinely care about others you work with. You treat them as human beings and appreciate their abilities and accomplishments.</font>
                                                                 </div>
 
-
-
                                                             </td>
                                                             <td class="wsite-multicol-col" style="width:33.333333333333%; padding:0 15px;">
-
-
 
                                                                 <div class="paragraph">
                                                                     <font color="#515151"><strong>TRUST</strong>&nbsp;You believe others are competent and will do the right thing, and you are OK with letting them drive when appropriate.</font>
                                                                 </div>
-
-
 
                                                             </td>
                                                         </tr>
@@ -449,7 +426,8 @@
 
                                     <div class="wsite-spacer" style="height:12px;"></div>
 
-                                    <div class="paragraph" style="text-align:center;">Amber makes building web applications simple, fast and enjoyable without sacrificing performance.</div>
+                                    <div class="paragraph" style="text-align:center;">Amber makes building web applications simple, fast and enjoyable without sacrificing performance.
+                                    </div>
 
                                     <div class="wsite-spacer" style="height:50px;"></div>
 
@@ -461,8 +439,6 @@
                                                         <tr class="wsite-multicol-tr">
                                                             <td class="wsite-multicol-col" style="width:33.333333333333%; padding:0 55px;">
 
-
-
                                                                 <h2 class="wsite-content-title" style="text-align:center;">Build Quickly</h2>
 
                                                                 <div class="paragraph" style="text-align:center;">Use code generators to and scaffolding to create rapid prototypes</div>
@@ -471,12 +447,8 @@
 
                                                                 <div class="paragraph" style="text-align:center;">A framework with only what you need, no bloatware. Small footprint, little conventions, developer freedom.</div>
 
-
-
                                                             </td>
                                                             <td class="wsite-multicol-col" style="width:33.333333333333%; padding:0 55px;">
-
-
 
                                                                 <h2 class="wsite-content-title" style="text-align:center;">No Configuration</h2>
 
@@ -486,22 +458,17 @@
 
                                                                 <div class="paragraph" style="text-align:center;">Crystal&rsquo;s syntax is heavily inspired on Ruby&rsquo;s, so it feels natural to read and easy to write.</div>
 
-
-
                                                             </td>
                                                             <td class="wsite-multicol-col" style="width:33.333333333333%; padding:0 55px;">
 
-
-
                                                                 <h2 class="wsite-content-title" style="text-align:center;">MIT License</h2>
 
-                                                                <div class="paragraph" style="text-align:center;">Built by the community for everyone. MIT License == commercial ready.</div>
+                                                                <div class="paragraph" style="text-align:center;">Built by the community for everyone. MIT License == commercial ready.
+                                                                </div>
 
                                                                 <h2 class="wsite-content-title" style="text-align:center;">High Performance</h2>
 
                                                                 <div class="paragraph" style="text-align:center;">Compiled, blazingly fast, native code, low memory footprint. Engineers delight!</div>
-
-
 
                                                             </td>
                                                         </tr>
@@ -532,39 +499,38 @@
                                         <tr class="wsite-multicol-tr">
                                             <td class="wsite-multicol-col" style="width:33.333333333333%; padding:0 15px;">
 
-
-
                                                 <div class="paragraph">
                                                     <font color="#626262">
-                                                        <font size="3">Amber Crystal Framework</font><br /><br />Guides<br />Docs<br />Community<br />&#8203;Source Code<br />&#8203;Code Of Conduct</font>
+                                                        <font size="3">Amber Crystal Framework</font>
+                                                        <br /><br />
+                                                        <a href="https://amber-crystal.gitbooks.io/amber/content/">Guides</a>
+                                                        <br />
+                                                        <a href="https://github.com/Amber-Crystal/amber/projects/2">Roadmap</a>
+                                                        <br />
+                                                        <a href="https://github.com/Amber-Crystal/amber/projects/2">Github</a>
+                                                        <br />
+                                                        <a href="https://gitter.im/Amber-Crystal/Lobby">Chat</a>
+                                                        <br />
+                                                        <a href="https://amber-crystal.gitbooks.io/amber/content/preface/code-of-conduct.html">Code Of Conduct</a>
+                                                    </font>
                                                 </div>
-
-
 
                                             </td>
                                             <td class="wsite-multicol-col" style="width:33.333333333333%; padding:0 15px;">
-
-
 
                                                 <div class="paragraph">
                                                     <font color="#818181" size="3">Crystal Language</font><br />&#8203;<br /><a href="https://crystal-lang.org/docs/" target="_blank">Learn</a><br /><a href="https://crystal-lang.org/api/0.21.1/" target="_blank">Standard Library</a><br
                                                     /><a href="https://crystal-lang.org/docs/conventions/coding_style.html" target="_blank">Code Guidelines</a><br /><a href="https://crystal-lang.org/community/" target="_blank">Community</a><br /><a href="https://github.com/crystal-lang/crystal"
                                                         target="_blank">&#8203;Source Code</a><br /><a href="https://play.crystal-lang.org/#/cr" target="_blank">Play Online</a></div>
 
-
-
                                             </td>
                                             <td class="wsite-multicol-col" style="width:33.333333333333%; padding:0 15px;">
-
-
 
                                                 <div style="text-align:right;">
                                                     <div style="height:0px;overflow:hidden"></div>
                                                     <span class="wsite-social wsite-social-default"></span>
                                                     <div style="height:0px;overflow:hidden"></div>
                                                 </div>
-
-
 
                                             </td>
                                         </tr>
@@ -588,21 +554,25 @@
         <label class="hamburger"><span></span></label>
         <ul class="wsite-menu-default">
             <li id="pg709196432525450600" class="wsite-menu-item-wrap">
+                <a href="https://amber-crystal.gitbooks.io/amber/content/" target="_blank" class="wsite-menu-item">
+guides
+</a>
+            </li>
+            <li id="pg709196432525450600" class="wsite-menu-item-wrap">
                 <a href="https://github.com/Amber-Crystal/amber/projects/2" target="_blank" class="wsite-menu-item">
-    				roadmap
-    			</a>
-
+roadmap
+</a>
             </li>
             <li id="pg246594821695395628" class="wsite-menu-item-wrap">
                 <a href="https://github.com/Amber-Crystal/amber" target="_blank" class="wsite-menu-item">
-    				github
-    			</a>
+github
+</a>
 
             </li>
             <li id="pg417344239176849217" class="wsite-menu-item-wrap">
                 <a href="https://gitter.im/Amber-Crystal/Lobby" target="_blank" class="wsite-menu-item">
-    				Chat
-    			</a>
+Chat
+</a>
 
             </li>
         </ul>
@@ -610,7 +580,6 @@
 
     <script type="text/javascript" src="files/theme/plugins.js"></script>
     <script type="text/javascript" src="files/theme/custom.js"></script>
-
 
 </body>
 
