Adds missing link to getting started
Former-commit-id: bb883f5e3ecc96cc824b678ad5a23db99611efbd

--- a/public/index.html
+++ b/public/index.html
@@ -295,7 +295,7 @@ popular application frameworks.</span>
 
                                                                     <div style="text-align:left;">
                                                                         <div style="height: 10px; overflow: hidden;"></div>
-                                                                        <a class="wsite-button wsite-button-large wsite-button-highlight" href="">
+                                                                        <a class="wsite-button wsite-button-large wsite-button-highlight" href="https://amber-crystal.gitbooks.io/amber/content/getting-started/installation/heroku.html">
                                                                             <span class="wsite-button-inner">Getting Started</span>
                                                                         </a>
                                                                         <div style="height: 10px; overflow: hidden;"></div>
